# docs/swagger.json
@@ -547,6 +547,12 @@
                         "description": "is_travel",
                         "name": "is_travel",
                         "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "refresh_token",
+                        "name": "refresh_token",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
